completed home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         }
     </style>
-    <title>Pattern</title>
+    <title>WALLPAPER</title>
 </head>
 
 <body>
@@ -35,9 +35,162 @@
 
     <section id="gallery">
         <div class="container">
-            <div class="card">
-                <img src="imgs/pattern1.jpeg" alt="" class="card-img-top">
-
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern1.jpeg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">First Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern2.jpeg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Second Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern3.jpeg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Third Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern4.jpeg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Four Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern5.jpeg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Five Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern6.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Six Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern7.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Seven Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern8.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Eight Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern9.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Nine Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern10.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Ten Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern11.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Eleven Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div><div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="imgs/pattern12.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Tewel Wallpaper</h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nemo eveniet nulla a expedita qui tenetur iure vitae sed corporis ipsum!
+                            </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </div>
